DotNetFrameworkProject_CE040_CE087/Tour_Management/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tour-management
  labels:
    name: tour-management
    app.kubernetes.io/name: tour-management
    app.kubernetes.io/managed-by: kubectl
